<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze Now</string>
    <string name="analyzing_image">Analyzing image ...</string>
    <string name="result">Hasil Analisis</string>

<!--    tab-->
    <string name="tab_text_1">Information</string>
    <string name="tab_text_2">History</string>
    <string name="tab_text_3">Setting</string>
    <string name="content_tab_home">wwww</string>
    <string name="content_tab_profile">Change your Profile here</string>
    <string name="content_tab_text">This is Tab %1$d</string>


    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="empty_image_warning">Image empty, please choose an image first</string>
    <string name="inference_time">inference_time</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>

    <string name="history_headline">Here\'s your analyze history</string>
    <string name="history_headline_not">You don\'t have any analyze history</string>

    <string name="title_placeholder">Title</string>
    <string name="placeholder_image">placeholder_image</string>

    <string name="information_headline">These are information that might help you</string>
    <string name="title">Title</string>
    <string name="published_date">Published Date</string>


    <string name="cancer_detected">In conclusion, the results of the analysis state that the image is <b>Cancer</b>.</string>
    <string name="no_cancer_detected">In conclusion, the results of the analysis state that the image is <b>Non-Cancer</b></string>
    <string name="result_info">For additional information like <b>News</b> and <b>History</b>, please check our Information Centre.</string>
    <string name="back_to_home">Back to Home</string>
    <string name="based">Based on the you\'ve image, here are the result</string>
    <string name="result_headline">Analysis Result</string>
    <string name="make_sure_the_image_is_clear">Make sure the image is clear</string>
    <string name="information_centre">Information Centre</string>
    <string name="for_more_information">For more information</string>
    <string name="choose_an_image_to_analyze">Choose an image to analyze</string>
    <string name="image_recognition_for_cancer_detection">Image Recognition for Cancer Detection</string>
    <string name="headline">Cancer Detection Apps</string>
    <string name="the_se_are_the_latest_news_about_cancer">The\'se are the latest news about cancer</string>
</resources>