<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:text="@string/headline"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvBottomHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/image_recognition_for_cancer_detection"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tvHeadline" />

    <TextView
        android:id="@+id/tvChoosseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:paddingBottom="10dp"
        android:text="@string/choose_an_image_to_analyze"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/previewImageView" />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/image_outline"
        app:layout_constraintBottom_toTopOf="@+id/galleryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeadline"
        app:srcCompat="@drawable/ic_place_holder" />

    <TextView
        android:id="@+id/tvOpenGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/make_sure_the_image_is_clear"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/informationButton"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

    <Button
        android:id="@+id/informationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/blue"
        android:layout_marginBottom="20dp"
        android:text="@string/information_centre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tvInformation"
        app:layout_constraintEnd_toStartOf="@+id/analyzeButton"
        app:layout_constraintStart_toStartOf="@+id/informationButton"
        app:layout_constraintTop_toBottomOf="@+id/tvOpenGallery" />


    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:paddingTop="20dp"
        android:text="@string/for_more_information"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/informationButton"
        app:layout_constraintTop_toBottomOf="@+id/analyzeButton" />


    <Button
        android:id="@+id/analyzeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/analyze"
        app:layout_constraintBottom_toTopOf="@+id/tvInformation"
        app:layout_constraintEnd_toEndOf="@+id/informationButton"
        app:layout_constraintStart_toEndOf="@+id/galleryButton"
        app:layout_constraintTop_toBottomOf="@+id/tvOpenGallery" />

</androidx.constraintlayout.widget.ConstraintLayout>